correction-bugs-alignement

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -54,12 +54,14 @@ a {
     padding: 10px 20px 10px 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 10%;
     height: 20px;
     position: absolute;
     left: 45%;
     top: 20%;
     @media (max-width: 599px) {
+      position: absolute;
+      left: 30%;
+      top: 11%;
       }
   }
 
