--- a/sass/layout/_join-us.scss
+++ b/sass/layout/_join-us.scss
@@ -15,15 +15,15 @@
             flex-wrap: no-wrap;
             }
         &__explain {
-            @media (max-width: 599px) {
-                width: 100%;
-                }
             &__container{
                 display:flex;
                 flex-direction:column;
                 justify-content: space-between;
                 text-align:center;
                 padding:20px;
+                @media (max-width: 599px) {
+                    padding : 20px 0 20px 0;
+                    }
                 >p {
                     margin-bottom: 20px;
                     margin-top: 1px;
@@ -40,6 +40,9 @@
                        padding:0;
                        display:flex;
                        flex-direction:column;
+                       > p {
+                        text-align: center;
+                       }
                    }
                 }
             }
@@ -49,10 +52,16 @@
 
 .fifty {
     width: 50%;
+    @media (max-width: 599px) {
+        width: 100%;
+        }
 }
 
 .thirty {
     width: 33%;
+    @media (max-width: 599px) {
+        width: 100%;
+        }
 }
 
 p {
